// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default Avatar should render correctly when no variant is passed 1`] = `
<DocumentFragment>
  <div
    class="sc-hLBbgP kUMFwY"
    data-rc="Avatar"
  >
    <img
      class="sc-bcXHqe dmpMIL"
      src="https://res.cloudinary.com/pensionbee/image/upload/w_200,h_200/v1611330623/Jasper_new_headshot_hrywvw.png"
    />
  </div>
</DocumentFragment>
`;

exports[`Highlighted Avatar should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-hLBbgP ljtvxN"
    data-rc="Avatar"
  >
    <img
      class="sc-bcXHqe dmpMIL"
      src="https://res.cloudinary.com/pensionbee/image/upload/w_200,h_200/v1611330623/Jasper_new_headshot_hrywvw.png"
    />
  </div>
</DocumentFragment>
`;
